[gd_scene load_steps=2 format=2]

[ext_resource path="res://entities/components/damage_area.gd" type="Script" id=1]

[node name="DamageArea" type="Area"]
script = ExtResource( 1 )

[node name="cooldownAttack" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_DamageArea_body_entered"]
[connection signal="timeout" from="cooldownAttack" to="." method="_on_cooldownAttack_timeout"]
